Some macOS Bluetooth PacketLogger capture files aren't recognized as PacketLogger files (regression, bisected)
This issue was migrated from bug 16670 in our old bug tracker.
Original bug information:
Reporter: Steffen Klee
Status: RESOLVED FIXED
Product: Wireshark
Component: Capture file support (libwiretap)
OS: All
Platform: All
Version: 3.2.5
Attachments:
Untitled.pklg: Failing macOS PacketLogger capture file